Class 'PostManagementController' is never used fixed the warning