@@ -23,10 +23,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @RestController
 @RequestMapping("/posts")
@@ -44,7 +41,22 @@ public class PostManagementController {
     @Value("${media.upload.dir}")
     private String uploadDir;
 
-    // Create a new post with media upload (1-3 files allowed)
+    private File getUploadDirectory() {
+        File uploadDirectory = new File(System.getProperty("user.dir"), uploadDir);
+        if (!uploadDirectory.exists()) {
+            uploadDirectory.mkdirs();
+        }
+        return uploadDirectory;
+    }
+
+    private String storeFile(MultipartFile file) throws IOException {
+        String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
+        String uniqueFileName = System.currentTimeMillis() + "_" + UUID.randomUUID() + "." + extension;
+        Path filePath = getUploadDirectory().toPath().resolve(uniqueFileName);
+        file.transferTo(filePath.toFile());
+        return "/media/" + uniqueFileName;
+    }
+
     @PostMapping
     public ResponseEntity<?> createPost(
             @RequestParam String userID,
@@ -53,34 +65,21 @@ public class PostManagementController {
             @RequestParam String category,
             @RequestParam List<MultipartFile> mediaFiles) {
 
-        // Validate number of uploaded files
         if (mediaFiles.size() < 1 || mediaFiles.size() > 3) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("You must upload between 1 and 3 media files.");
         }
 
-        // Create upload directory if not exists
-        final File uploadDirectory = new File(uploadDir.isBlank() ? uploadDir : System.getProperty("user.dir"), uploadDir);
-        if (!uploadDirectory.exists() && !uploadDirectory.mkdirs()) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to create upload directory.");
+        List<String> mediaUrls = new ArrayList<>();
+        for (MultipartFile file : mediaFiles) {
+            if (file.getContentType() != null && file.getContentType().matches("image/(jpeg|png|jpg)|video/mp4")) {
+                try {
+                    mediaUrls.add(storeFile(file));
+                } catch (IOException e) {
+                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to store media file.");
+                }
+            }
         }
 
-        // Store media files and generate URLs
-        List<String> mediaUrls = mediaFiles.stream()
-                .filter(file -> file.getContentType().matches("image/(jpeg|png|jpg)|video/mp4"))
-                .map(file -> {
-                    try {
-                        String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
-                        String uniqueFileName = System.currentTimeMillis() + "_" + UUID.randomUUID() + "." + extension;
-                        Path filePath = uploadDirectory.toPath().resolve(uniqueFileName);
-                        file.transferTo(filePath.toFile());
-                        return "/media/" + uniqueFileName;
-                    } catch (IOException e) {
-                        throw new RuntimeException("Failed to store file " + file.getOriginalFilename(), e);
-                    }
-                })
-                .collect(Collectors.toList());
-
-        // Save post
         PostManagementModel post = new PostManagementModel();
         post.setUserID(userID);
         post.setTitle(title);
@@ -92,21 +91,18 @@ public class PostManagementController {
         return ResponseEntity.status(HttpStatus.CREATED).body(savedPost);
     }
 
-    // Get all posts
     @GetMapping
     public List<PostManagementModel> getAllPosts() {
         return postRepository.findAll();
     }
 
-    // Get posts by a specific user
     @GetMapping("/user/{userID}")
     public List<PostManagementModel> getPostsByUser(@PathVariable String userID) {
         return postRepository.findAll().stream()
                 .filter(post -> post.getUserID().equals(userID))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Get a post by its ID
     @GetMapping("/{postId}")
     public ResponseEntity<?> getPostById(@PathVariable String postId) {
         PostManagementModel post = postRepository.findById(postId)
@@ -114,28 +110,24 @@ public class PostManagementController {
         return ResponseEntity.ok(post);
     }
 
-    // Delete a post by ID (including media files)
     @DeleteMapping("/{postId}")
     public ResponseEntity<?> deletePost(@PathVariable String postId) {
         PostManagementModel post = postRepository.findById(postId)
                 .orElseThrow(() -> new ResourceNotFoundException("Post not found: " + postId));
 
-        // Delete associated media files
         for (String mediaUrl : post.getMedia()) {
             try {
-                Path filePath = Paths.get(uploadDir, mediaUrl.replace("/media/", ""));
+                Path filePath = Paths.get(getUploadDirectory().getAbsolutePath(), mediaUrl.replace("/media/", ""));
                 Files.deleteIfExists(filePath);
             } catch (IOException e) {
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                        .body("Failed to delete media file: " + mediaUrl);
+                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to delete media: " + mediaUrl);
             }
         }
 
-        postRepository.deleteById(postId);
+        postRepository.delete(post);
         return ResponseEntity.ok("Post deleted successfully!");
     }
 
-    // Update post details and optionally add new media files
     @PutMapping("/{postId}")
     public ResponseEntity<?> updatePost(
             @PathVariable String postId,
@@ -152,32 +144,19 @@ public class PostManagementController {
         post.setCategory(category);
 
         if (newMediaFiles != null && !newMediaFiles.isEmpty()) {
-            final File uploadDirectory = new File(uploadDir.isBlank() ? uploadDir : System.getProperty("user.dir"), uploadDir);
-            if (!uploadDirectory.exists() && !uploadDirectory.mkdirs()) {
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to create upload directory.");
+            for (MultipartFile file : newMediaFiles) {
+                try {
+                    post.getMedia().add(storeFile(file));
+                } catch (IOException e) {
+                    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to store media file.");
+                }
             }
-
-            List<String> newMediaUrls = newMediaFiles.stream()
-                    .map(file -> {
-                        try {
-                            String extension = StringUtils.getFilenameExtension(file.getOriginalFilename());
-                            String uniqueFileName = System.currentTimeMillis() + "_" + UUID.randomUUID() + "." + extension;
-                            Path filePath = uploadDirectory.toPath().resolve(uniqueFileName);
-                            file.transferTo(filePath.toFile());
-                            return "/media/" + uniqueFileName;
-                        } catch (IOException e) {
-                            throw new RuntimeException("Failed to store file " + file.getOriginalFilename(), e);
-                        }
-                    })
-                    .collect(Collectors.toList());
-            post.getMedia().addAll(newMediaUrls);
         }
 
         postRepository.save(post);
         return ResponseEntity.ok("Post updated successfully!");
     }
 
-    // Delete a specific media file from a post
     @DeleteMapping("/{postId}/media")
     public ResponseEntity<?> deleteMedia(@PathVariable String postId, @RequestBody Map<String, String> request) {
         String mediaUrl = request.get("mediaUrl");
@@ -186,46 +165,42 @@ public class PostManagementController {
                 .orElseThrow(() -> new ResourceNotFoundException("Post not found: " + postId));
 
         if (!post.getMedia().remove(mediaUrl)) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Media file not found in post.");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Media file not found.");
         }
 
         try {
-            Path filePath = Paths.get(uploadDir, mediaUrl.replace("/media/", ""));
+            Path filePath = Paths.get(getUploadDirectory().getAbsolutePath(), mediaUrl.replace("/media/", ""));
             Files.deleteIfExists(filePath);
         } catch (IOException e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to delete media file.");
         }
 
         postRepository.save(post);
-        return ResponseEntity.ok("Media file deleted successfully!");
+        return ResponseEntity.ok("Media deleted successfully!");
     }
 
-    // Like or unlike a post
     @PutMapping("/{postId}/like")
     public ResponseEntity<PostManagementModel> likePost(@PathVariable String postId, @RequestParam String userID) {
         return postRepository.findById(postId)
                 .map(post -> {
-                    // Toggle like status
                     post.getLikes().put(userID, !post.getLikes().getOrDefault(userID, false));
                     postRepository.save(post);
 
-                    // Send notification if user is not liking their own post
                     if (!userID.equals(post.getUserID())) {
                         String userFullName = userRepository.findById(userID)
                                 .map(user -> user.getFullname())
                                 .orElse("Someone");
-                        String message = String.format("%s liked your %s post", userFullName, post.getTitle());
-                        String currentDateTime = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-                        NotificationModel notification = new NotificationModel(post.getUserID(), message, false, currentDateTime);
+                        String message = String.format("%s liked your post: %s", userFullName, post.getTitle());
+                        String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+                        NotificationModel notification = new NotificationModel(post.getUserID(), message, false, timestamp);
                         notificationRepository.save(notification);
                     }
 
                     return ResponseEntity.ok(post);
                 })
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND).build());
+                .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
-    // Add a comment to a post
     @PostMapping("/{postId}/comment")
     public ResponseEntity<PostManagementModel> addComment(@PathVariable String postId, @RequestBody Map<String, String> request) {
         String userID = request.get("userID");
@@ -246,11 +221,10 @@ public class PostManagementController {
                     post.getComments().add(comment);
                     postRepository.save(post);
 
-                    // Notify post owner about the new comment
                     if (!userID.equals(post.getUserID())) {
                         String message = String.format("%s commented on your post: %s", userFullName, post.getTitle());
-                        String currentDateTime = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-                        NotificationModel notification = new NotificationModel(post.getUserID(), message, false, currentDateTime);
+                        String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+                        NotificationModel notification = new NotificationModel(post.getUserID(), message, false, timestamp);
                         notificationRepository.save(notification);
                     }
 
@@ -259,12 +233,12 @@ public class PostManagementController {
                 .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
-    // Update a comment
     @PutMapping("/{postId}/comment/{commentId}")
     public ResponseEntity<PostManagementModel> updateComment(
             @PathVariable String postId,
             @PathVariable String commentId,
             @RequestBody Map<String, String> request) {
+
         String userID = request.get("userID");
         String content = request.get("content");
 
@@ -280,12 +254,12 @@ public class PostManagementController {
                 .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
-    // Delete a comment (allowed by comment owner or post owner)
     @DeleteMapping("/{postId}/comment/{commentId}")
     public ResponseEntity<PostManagementModel> deleteComment(
             @PathVariable String postId,
             @PathVariable String commentId,
             @RequestParam String userID) {
+
         return postRepository.findById(postId)
                 .map(post -> {
                     post.getComments().removeIf(comment ->
@@ -297,9 +271,8 @@ public class PostManagementController {
                 .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
-    // Handle file size limit exception
     @ExceptionHandler(MaxUploadSizeExceededException.class)
-    public ResponseEntity<?> handleMaxSizeException(MaxUploadSizeExceededException exc) {
-        return ResponseEntity.status(HttpStatus.PAYLOAD_TOO_LARGE).body("File size exceeds the maximum limit!");
+    public ResponseEntity<?> handleMaxSizeException(MaxUploadSizeExceededException ex) {
+        return ResponseEntity.status(HttpStatus.PAYLOAD_TOO_LARGE).body("File size exceeds maximum limit!");
     }
 }
